--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Multi Game Platform</title>
     <style>
+                
+        html, body {
+            overflow-x: hidden; 
+            width: 100%;
+            position: relative;
+            margin: 0;
+            padding: 0;
+            touch-action: pan-y; 
+        }
+
+        #game-container { 
+            max-width: 100vw;
+            overflow: hidden;
+        }
+
         * {
             margin: 0;
             padding: 0;
