--- a/index.html
+++ b/index.html
@@ -3097,6 +3097,19 @@
                 
                 <div class="deposit-container">
                     <h1 class="deposit-title">Пополнение</h1>
+
+                    <div class="manual-deposit" style="margin-bottom: 20px; padding: 15px; background: rgba(255,255,255,0.05); border-radius: 12px;">
+                        <div style="color: #aaa; font-size: 0.9em; margin-bottom: 10px;">Введите сумму в TON:</div>
+                        <div style="display: flex; gap: 10px;">
+                            <input type="number" id="tonAmountInput" placeholder="1.0" step="0.1" min="0.1" 
+                                   style="flex: 1; padding: 12px; border-radius: 8px; border: 1px solid #444; background: #222; color: white; outline: none;">
+                            <button class="vibrate-click" onclick="depositManualTON()" 
+                                    style="padding: 0 20px; background: #0088cc; color: white; border: none; border-radius: 8px; font-weight: bold; cursor: pointer;">
+                                Оплатить
+                            </button>
+                        </div>
+                    </div>
+
                     <div class="deposit-methods">
                         <button class="deposit-method vibrate-click" id="cryptoBotBtn">Пополнить через CryptoBot</button>
                         <button class="deposit-method vibrate-click" id="sbpBtn">Пополнить через СБП</button>
@@ -5840,6 +5853,38 @@
                 alert("Ошибка оплаты.");
             }
         }
+        window.depositManualTON = async function() {
+            const input = document.getElementById('tonAmountInput');
+            const amount = parseFloat(input.value);
+
+            if (!tonConnectUI.connected) {
+                alert("Пожалуйста, сначала подключите кошелек (кнопка вверху)!");
+                return;
+            }
+
+            if (isNaN(amount) || amount <= 0) {
+                alert("Введите корректную сумму пополнения.");
+                return;
+            }
+
+            const transaction = {
+                validUntil: Math.floor(Date.now() / 1000) + 600,
+                messages: [
+                    {
+                        address: "UQC5UX1bLI9TAkXyR2q-C_M1Kx3HbUxdtcUOShVIcWhMqHkG", // Кошелек заказчика
+                        amount: (amount * 1000000000).toString(), // Конвертация суммы из ввода в нанотоны
+                    }
+                ]
+            };
+
+            try {
+                await tonConnectUI.sendTransaction(transaction);
+                alert(`Запрос на ${amount} TON отправлен в ваш кошелек!`);
+            } catch (e) {
+                console.error(e);
+                alert("Ошибка при создании платежа.");
+            }
+        };
     </script>
 </body>
 </html>
